@@ -105,6 +105,7 @@ public:
   virtual void removeColumn(const QString &widgetName, int column, int count);
   virtual void setRowCaption(const QString &widgetName, int row, const QString& text);
   virtual void setColumnCaption(const QString &widgetName, int column, const QString& text);
+  virtual int getWinID();
 
 public slots:
   /** Sets the instance's parent */
