@@ -6,6 +6,7 @@ Sat Oct 6 17:53:47 2007 - Andras Mantia <amantia@kde.org>
 	o fix ExecButton.setEnabled() [#113624]
 	o use icon instead of "..." in the file selector [#109985]
 	o make @echo really work [#138705]
+	o add DCOP method to get the winID [#111161]
 
 Thu Sep 14 20:01:18 2006 - Michal Rudolf <mrudolf@kdewebdev.org>
 (actually imported from a work branch on Sep 29, 2007 by Andras Mantia <amantia@kde.org>)
